# highway-sleef

./: .gitmodules  CMakeLists.txt  COPYRIGHT  LICENSE-MIT  README.md
outputs/: identical_to_sleef_results.txt  sleef-generated.h  speed_results.json  speed_results_v2.json  speed_results_v2.tsv  ulp_results.txt
src/gen-bindings/: AVX512FloatUtils.h  CMakeLists.txt  Estrin.h  ExtraHwyOps.h  PayneHanekReductionTable.cc  README.md  translate.py  treesitter_utils.py
src/gen-bindings/rename_data/: constant_renames.tsv  function_renames.tsv  macro_conditionals.tsv  simd_ops.tsv  types.tsv
src/tests/: CMakeLists.txt  README.md  all_floats.cc  define_dispatchers.h  identical_to_sleef.cc  measure_speed.cc  measure_ulp.cc  mismatch_test.cc  sampling_test.cc  sincospi.h  speed_results_to_md.py
